--- a/infl-styles/_button.scss
+++ b/infl-styles/_button.scss
@@ -176,7 +176,7 @@ button {
 
 .button-dropdown {
   position: relative;
-
+  display: inline-block;
   &.show {
 
     .options {
